Fix shortcuts issues with KeyboardShortcuts
* Ensure keyboard events are restricted to the EventsSheet by listening only for key presses and other events from the EventsSheet container. No listener on the document with a "focused" boolean that can be not synchronized with the real element having the focus (happened in the previous implementation if you scroll too much in EventsSheet or delete the selection: the blur() method of KeyboardShortcuts would never be called).
  * Additional care must be done when an element is removed (which can happen after deletion of the selection or scroll) to put back the focus to the container div (see _ensureFocus). Otherwise we lose the focus so keyboard shortcuts don't work anymore until you click again on some elemnt (which would not be a huge bug by itself).
* Improve shortcuts for drag'n'drop by properly listening to modifier keys when something is dragged.

--- a/newIDE/app/src/EventsSheet/EventsTree/style.css
+++ b/newIDE/app/src/EventsSheet/EventsTree/style.css
@@ -1,6 +1,12 @@
 /* This overwrite the default react-sortable-tree css to display events list */
 
 /**
+ * Remove the outline visible on the events sheet (contrary to most
+ * controls on screen, we don't want a visible focus there).
+ */
+.gd-events-sheet:focus { outline: none; }
+
+/**
  * Draggable handle on the left of an event
  */
 .gd-events-sheet .rst__moveHandle {
